--- a/src/public/style/project.css
+++ b/src/public/style/project.css
@@ -1,100 +1,89 @@
+
+* {
+  /* outline: 1px solid red; */
+}
+main {
+  margin: 0px 40px 0px 40px;
+}
 .ul-container {
-    display: flex;
-    gap: 120px;
-    justify-content: center;
-  }
-  header {
-    display: flex;
-    justify-content: center;
-  }
-  .nav-container {
-    position: fixed;
-    top: 28px;
-    width: 92%;
-    padding: 16px;
-    border-radius: 100px;
-    background-color: black;
-    opacity: 0.85;
-    backdrop-filter: blur(10px);
-  }
-  .nav-items a {
-    color: white;
-    text-decoration: none;
-  }
-.modal {
+  display: flex;
+  gap: 120px;
+  justify-content: center;
+}
+header {
+  display: flex;
+  justify-content: center;
+}
+.nav-container {
+  position: fixed;
+  top: 28px;
+  width: 92%;
+  padding: 16px;
+  border-radius: 100px;
+  background-color: black;
+  opacity: 0.85;
+  backdrop-filter: blur(10px);
+}
+.nav-items a {
+  color: white;
+  text-decoration: none;
+}
+
+#output {
+  display: flex;
+  gap: 12px;
+  flex-direction: column;  
+}
+
+.listBook {
+  padding: 20px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(235, 235, 235);
+  transition: all;
+}
+.name-book {
+  font-size: 20px;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+.hero-section {
+  margin-top: 120px;
+  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 0.4rem;
-  width: 450px;
-  padding: 1.3rem;
-  min-height: 250px;
-  position: absolute;
-  z-index: 2;
-
-}
-
-.modal .flex {
-  display: flex;
   align-items: center;
-  justify-content: space-between;
+}
+.title {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 12px;
 }
 
-.modal input {
-  padding: 0.7rem 1rem;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  font-size: 0.9em;
+.button-container {
+  display: flex;
+  gap: 12px;
+  align-items: center;
 }
 
-.modal p {
-  font-size: 0.9rem;
-  color: #777;
-  margin: 0.4rem 0 0.2rem;
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  font-weight: 600;
-}
-
-.btn {
-  display: inline-block;
-  padding: 0.8rem 1.4rem;
-  font-weight: 700;
-  background-color: black;
+.delete-button {
+  padding: 8px;
+  border: 0;
+  border-radius: 8px;
   color: white;
-  border-radius: 5px;
-  text-align: center;
-  font-size: 1em;
+  font-weight: 600;
+  background-color: rgb(243, 53, 53);
+  cursor: pointer;
 }
-
-.btn-open {
-  position: absolute;
-  bottom: 150px;
-}
-
-.btn-close {
-  transform: translate(10px, -20px);
-  padding: 0.5rem 0.7rem;
-  background: #eee;
-  border-radius: 50%;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(3px);
-  z-index: 1;
-}
-
-.hidden {
-  display: none;
+.edit-button {
+  padding: 8px;
+  color: white;
+  font-weight: 600;
+  border: 0;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: rgb(83, 255, 83);
 }
